--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gf-extractlinks",
+  "name": "gftm-extractlinks",
   "version": "1.0.0",
   "description": "extract links from a string",
   "main": "index.js",
