--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gf-extract-links-lib",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "extract links from a string",
   "main": "index.js",
   "directories": {
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/gabyfutemma/extractlinks-gf#readme",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.2.0"
+    "eslint": "^5.5.0",
+    "mocha": "^5.2.0",
+    "nyc": "^13.0.1"
   }
 }
